examples/errors/wrongloops.dvx
int main() {
  bool a,c,d;
  for i in a..c step d { }
  while 3 { }
}
